# science-codeevolve-fix

./: .gitignore  README.md  codeevolve_run.py  environment.yaml  pyproject.toml  run.sh  setup.py
codeevolve/: cli.py  evaluator.py
experiments/alphaevolve_math_problems/circle_packing_rect/gemini_mp_insp/: best_sol.npy  best_sol.pkl  config.yaml
experiments/alphaevolve_math_problems/circle_packing_rect/gemini_mp_insp_nocontext/: best_sol.npy  best_sol.pkl  (+1 more)
notebooks/: ablations.ipynb  results.ipynb
notebooks/data_analysis_utils/: __init__.py  plotting_utils.py  processing_utils.py
problems/: README.md  run_template.sh
problems/F_time/: SETUP.md  run.sh
problems/F_time/configs/: config.yaml  config_mp_insp.yaml  tmp.txt
problems/F_time/input/: config.yaml  evaluate.py
problems/arrow_time_sim/: run.sh
problems/arrow_time_sim/configs/: config.yaml  config_edited.yaml
problems/arrow_time_sim/input/: evaluate.py
problems/problem_template/: run.sh
problems/problem_template/configs/: config_insp.yaml  config_mp.yaml  config_mp_insp.yaml  config_no_evolve.yaml  config_no_mp_or_insp.yaml
scripts/: clean_ckpts.sh  interactive_launcher.py  run.sh  run_F_time.sh  run_windows.ps1
src/codeevolve/: __init__.py  adversarial.py  agents.py  cli.py  climate.py  database.py  evaluator.py  evolution.py  islands.py  lm.py
src/codeevolve/prompt/: sampler.py  template.py
src/codeevolve/utils/: ckpt_utils.py  cvt_utils.py  logging_utils.py  parsing_utils.py
tests/: __init__.py  test_adversarial.py  test_apply_diff.py  test_climate.py  test_evaluator_batch.py
(+785 files in other folders)
